<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/image_view_download_graphic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/download_graphic_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_download_18dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/custom_button"
        app:layout_constraintStart_toStartOf="@+id/custom_button"
        app:layout_constraintTop_toBottomOf="@+id/image_view_download_graphic">

        <com.udacity.customviews.RadioButtonExt
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_glide"
            app:sourceUrl="@string/radio_glide_repo"
            app:targetFilename="@string/filename_glide"/>

        <com.udacity.customviews.RadioButtonExt
            android:id="@+id/radio_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_app"
            app:sourceUrl="@string/radio_app_repo"
            app:targetFilename="@string/filename_loadapp"/>

        <com.udacity.customviews.RadioButtonExt
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_retrofit"
            app:sourceUrl="@string/radio_retrofit_repo"
            app:targetFilename="@string/filename_retrofit"/>
    </RadioGroup>

    <com.udacity.customviews.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:padding="1dp"
        app:arcCColor="@color/colorAccent"
        app:backgroundColor="@color/colorPrimary"
        app:fillColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0"
        app:textColor="@color/white"
        app:idleText="@string/button_state_download"
        app:loadingText="@string/button_state_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>